--- a/.github/workflows/push-dev-docker-images.yml
+++ b/.github/workflows/push-dev-docker-images.yml
@@ -45,12 +45,12 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # -
+      #   name: Login to DockerHub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Find go version
         run: |
@@ -76,7 +76,7 @@ jobs:
         with:
           file: Dockerfile
           context: .
-          push: true
+          push: false
           platforms: linux/amd64,linux/arm64
           build-args: |
             GO_VERSION=${{ env.GO_VERSION }}
@@ -91,7 +91,7 @@ jobs:
         with:
           file: tests/e2e/initialization/init.Dockerfile
           context: .
-          push: true
+          push: false
           platforms: linux/amd64,linux/arm64
           build-args: |
             E2E_SCRIPT_NAME=chain
@@ -103,7 +103,7 @@ jobs:
         with:
           file: Dockerfile.cosmovisor
           context: .
-          push: true
+          push: false
           platforms: linux/amd64,linux/arm64
           build-args: |
             GO_VERSION=${{ env.GO_VERSION }}
