--- a/.github/workflows/push-dev-docker-images.yml
+++ b/.github/workflows/push-dev-docker-images.yml
@@ -33,6 +33,7 @@ env:
 jobs:
   push-docker-images:
     runs-on: buildjet-2vcpu-ubuntu-2204
+    # runs-on: ubuntu-22.04
     steps:
       -
         name: Check out repo
@@ -70,33 +71,33 @@ jobs:
           SHORT_SHA=$(echo ${GITHUB_SHA} | cut -c1-8)
           echo "DOCKER_IMAGE_TAG=${{ github.ref_name }}-${SHORT_SHA}-$(date +%s)" >> $GITHUB_ENV
           echo "OSMOSIS_VERSION=${{ github.ref_name }}-$SHORT_SHA" >> $GITHUB_ENV
-      -
-        name: Build and Push Docker Images
-        uses: docker/build-push-action@v6
-        with:
-          file: Dockerfile
-          context: .
-          push: false
-          platforms: linux/amd64,linux/arm64
-          build-args: |
-            GO_VERSION=${{ env.GO_VERSION }}
-            RUNNER_IMAGE=${{ env.RUNNER_BASE_IMAGE_ALPINE }}
-            GIT_VERSION=${{ env.OSMOSIS_VERSION }}
-            GIT_COMMIT=${{ github.sha }}
-          tags: |
-            ${{ env.OSMOSIS_DEV_IMAGE_REPOSITORY }}:${{ env.DOCKER_IMAGE_TAG }}
-      -
-        name: Build and Push E2E Init Docker Images
-        uses: docker/build-push-action@v6
-        with:
-          file: tests/e2e/initialization/init.Dockerfile
-          context: .
-          push: false
-          platforms: linux/amd64,linux/arm64
-          build-args: |
-            E2E_SCRIPT_NAME=chain
-          tags: |
-            ${{ env.OSMOSIS_INIT_CHAIN_IMAGE_REPOSITORY }}:${{ env.DOCKER_IMAGE_TAG }}
+      # -
+      #   name: Build and Push Docker Images
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     file: Dockerfile
+      #     context: .
+      #     push: false
+      #     platforms: linux/amd64,linux/arm64
+      #     build-args: |
+      #       GO_VERSION=${{ env.GO_VERSION }}
+      #       RUNNER_IMAGE=${{ env.RUNNER_BASE_IMAGE_ALPINE }}
+      #       GIT_VERSION=${{ env.OSMOSIS_VERSION }}
+      #       GIT_COMMIT=${{ github.sha }}
+      #     tags: |
+      #       ${{ env.OSMOSIS_DEV_IMAGE_REPOSITORY }}:${{ env.DOCKER_IMAGE_TAG }}
+      # -
+      #   name: Build and Push E2E Init Docker Images
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     file: tests/e2e/initialization/init.Dockerfile
+      #     context: .
+      #     push: false
+      #     platforms: linux/amd64,linux/arm64
+      #     build-args: |
+      #       E2E_SCRIPT_NAME=chain
+      #     tags: |
+      #       ${{ env.OSMOSIS_INIT_CHAIN_IMAGE_REPOSITORY }}:${{ env.DOCKER_IMAGE_TAG }}
       -
         name: Build and Push Cosmovisor Docker Images
         uses: docker/build-push-action@v6
